# PsyNamic

./: .gitignore  .gitmodules  README.md  convert_toml_into_requirements.sh  dosages.xlsx  dosages_V2.xlsx  eval.sh  generate_and_run.sh  ner_tags.jsonl  predict.sh  prepare_data.ipynb  pyproject.toml  quick_n_dirty_plot.py  requirements.txt  search_terms.jsonl  stop_service.ps1  training.sh
alps/: wandb_export_2024-09-30T21_37_37.567+02_00.csv
app/: Makefile
app_dash/: .gitignore  README.md  app.py  callbacks.py  requirements.txt
archive/: test_matcher.ipynb
data/: analyse_predictions.ipynb  asreview_dataset_cleaned_150.csv  dosages.csv  iaa.py  output_iaa.txt  prepare_data.ipynb  prepare_data.py  prepare_ner_data_for_norm.py  process_psychner.py  prodigy_data_reader.py  psychnamic_iaa.py  psynamic_analyze_double_annotation.ipynb  psynamic_data_stats.py  psynamic_dataanalysis.py  psynamic_format_for_double_annotation.py  psynamic_iaa.py  psynamic_prepare_data.py  psynamic_prepare_data_for_annotation.py  psynamic_prepare_data_for_training.py  psynamic_prepare_data_for_webapp.py  quick_dirty_for_abstract.ipynb
explorations/: test_meditron.txt
graphics/: Abstract.tiff  Automate.tif  Neuralnet.tif  Paper_annotate.tif  abstracts_with_blanks.tiff
guidelines/: .~lock.Annotation_guidelines_V5.docx#  Annotation_guidelines_V5.docx  Annotation_guidelines_V8.docx  annotation_guidelines_04.04.2024.odt  install_guidelines_09.04.2024.odt  install_guidelines_16.04.2024.odt  install_guidelines_19.04.2024.odt  install_guidelines_23.04.2024.odt  install_guidelines_25.04.2024.odt
model/: analyse_performance.py  datahandler.py  model.py  model_performance_outcomes.csv  model_performance_regimen.csv  model_performance_setting.csv  model_performance_study_control.csv  model_performance_study_purpose.csv  psynamic_prepare_data_for_training.py
prodigy/: Dockerfile  Makefile  choice_labels.json  choice_labels_sorted.json  docker-compose_dist.yml  labels.json  patterns.jsonl  patterns.txt  prodigy.json  recipe.py  requirements.txt  span_labels.json  stop_service.sh
(+443 files in other folders)
