[tool.poetry]
name = "psychner"
version = "0.1.0"
description = ""
authors = ["veralara.bernhard <veralara.bernhard@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
tqdm = "^4.66.2"
requests = "^2.31.0"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
