[tool.poetry]
name = "psychner"
version = "0.1.0"
description = ""
authors = ["veralara.bernhard <veralara.bernhard@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
tqdm = "^4.66.2"
requests = "^2.31.0"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
nltk = "^3.8.1"
stride-utils = {git = "https://github.com/Ineichen-Group/stride_utils.git", rev = "v0.6.2"}
torch = "^2.3.1"
iterative-stratification = "^0.1.7"
transformers = "^4.42.3"
accelerate = "^0.32.1"
wandb = "^0.17.4"
[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
