[tool.poetry]
name = "psychner"
version = "0.1.0"
description = ""
authors = ["veralara.bernhard <veralara.bernhard@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
tqdm = "^4.66.2"
requests = "^2.31.0"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
nltk = "^3.8.1"
stride-utils = {git = "https://github.com/Ineichen-Group/stride_utils.git", rev = "v0.7.7"}
torch = "^2.3.1"
iterative-stratification = "^0.1.7"
transformers = "^4.42.3"
accelerate = "^0.32.1"
wandb = "^0.17.4"
confidenceinterval = {git = "https://github.com/jacobgil/confidenceinterval.git"}
evaluate = "^0.4.2"
seqeval = "^1.2.2"
django = "^5.1.1"
psycopg = "^3.2.1"
[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
